Minor fixes: - Interactive text: fix some layout issues and make sure optional properties only show when relevant - 360 Image: make sure all optional properties in group are shown

--- a/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
+++ b/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
@@ -500,7 +500,8 @@ table tr.shaded {
 }
 
 /* BORDER STYLES */
-table.full td {
+table.full td,
+table.full th {
 	border:	1px solid #333333;
 	border:	1px solid #333333;
 }
